fix: skin box z-index

--- a/Ashok/src/components/layout/layout.less
+++ b/Ashok/src/components/layout/layout.less
@@ -94,6 +94,7 @@ body {
             position: absolute;
             right: -10px;
             top: 40px;
+            z-index: 100;
             box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
             border-radius: 4px;
             .el-button {
